# oz-assignment

./: README.md
CSS/: chat.css  chat.html  profile.css  profile.html
Database/: 2일차 과제.ipynb  chapter01_06.ipynb  data_generate.py  챌린지_14~20.sql
Database/fish_shaped_bun/: dummy.py
Django/: db.sqlite3  pyproject.toml
Django/boards/: admin.py  models.py
Django/boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
Django/common/: models.py
Django/config/: authentication.py  settings.py  urls.py
Django/feeds/: models.py  serializers.py  tests.py  views.py
Django/feeds/migrations/: 0001_initial.py
Django/reviews/: admin.py  models.py  tests.py  views.py
Django/reviews/migrations/: 0001_initial.py
Django/users/: admin.py  models.py  serializers.py  urls.py  views.py
Django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
Fastapi/src/: main.py
HTML/day_1/: profile.html
HTML/day_2/: 과제.html
JAVASCRIPT/: join.css  join.html  join.js  monster.html  과제1.html
JAVASCRIPT/Admin/: index3.css  index3.html  index3.js  index_day2.css  index_day2.html  index_day2.js
Machine-Learning/: 1.data_analysis.ipynb  _oz_machin_learning.ipynb
Scraping/: kream.py  melon.py  naver.py  s_naver.py  setup-finish.html
Scraping/coupang/: cou_1.py  coupang.py
git/1st/: oz_front.yaml
git/3rd/: oz_back.yaml  oz_cs.yaml  oz_fullstack.yaml  (+2 more)
linux/: linux_0113(문제).ipynb  linux_1426.ipynb
python/: python chapter1~2(easy).ipynb
(+51 files in other folders)
